--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a business manager learning web development</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p> Novi, Mi.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are outdoor sports and martial arts</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a web developer </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live close to Novi,Mi</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be able to create my very own web tools for my start up</p>
     </section>
 
     <footer id="footer">
